# hydraulic-toolbox

./: .gitignore  Makefile  README.md  readme.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: db.py  main.py  models.py  seed.py
backend/app/core/: schemas.py  units.py
backend/app/routers/: auth.py  pumps.py  results.py  scenarios.py  system_curves.py
backend/app/scripts/: generate_report.py
backend/app/services/: affinity.py  combine.py  curves.py  intersections.py  report.py  storage.py
backend/app/tasks/: celery_app.py  compute.py
backend/app/templates/: report.html
backend/tests/: test_affinity.py  test_csv_parsers.py  test_intersections.py  test_parallel_series.py  test_por_aor.py
ci/: github-actions.yml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/pumps/: page.tsx
frontend/app/pumps/[id]/: page.tsx
frontend/app/results/[id]/: page.tsx
frontend/app/scenarios/: page.tsx
frontend/app/system-curves/: page.tsx
frontend/components/: curve-chart.tsx  pump-form.tsx  scenario-form.tsx  system-curve-form.tsx
frontend/lib/: api.ts
infrastructure/: docker-compose.yml  nginx.conf
samples/: pump_A.csv  pump_B.csv  system_demo.csv
