[project]
name = "hydraulic-backend"
version = "0.1.0"
description = "Hydraulic pump and system curve analysis API"
authors = [{name = "Hydraulic Toolbox", email = "engineering@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "celery>=5.3",
    "redis>=5.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pint>=0.23",
    "jinja2>=3.1",
    "weasyprint>=60.0",
    "plotly>=5.19",
    "python-slugify>=8.0",
    "orjson>=3.9",
    "aiofiles>=23.2"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "hypothesis[numpy,pandas]>=6.98"
]

dev = [
    "ruff>=0.3",
    "black>=24.3",
    "isort>=5.13",
    "mypy>=1.9",
    "types-redis",
    "types-python-jose",
    "types-passlib",
    "types-pytz"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
